--- a/Agriculture/AgriApp/templates/predict_form.html
+++ b/Agriculture/AgriApp/templates/predict_form.html
@@ -1,43 +1,64 @@
-<!-- templates/predict_form.html -->
-
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
+{% load static%}
+
 <head>
     <meta charset="UTF-8">
-    <title>Crop Prediction Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/crop_rec.css' %}">
 </head>
 
 <body>
-    <h1>Predict the Suitable Crop</h1>
-    <form method="post">
-        {% csrf_token %}
-        <label for="nitrogen">Nitrogen (N):</label>
-        <input type="number" step="any" id="nitrogen" name="nitrogen" required><br><br>
+    <div class="container">
+        <!-- code here -->
+        <div class="card">
+            <div class="card-image">
+                <h3 class="card-heading"> Crop Recommendation</h3>
+                <h6>Enter the following details about your soil and weather conditions to receive a crop recommendation
+                    tailored to your farm's needs. Accurate inputs ensure the most suitable crop suggestions for optimal
+                    yield:</h6>
+            </div>
+            <form class="card-form" method="post">
+                {% csrf_token %}
+                <div class="input">
+                    <input type="number" class="input-field" step="any" id="nitrogen" name="nitrogen" required />
+                    <label class="input-label">Nitrogen (N)</label>
+                </div>
+                <div class="input">
+                    <input type="number" class="input-field" step="any" id="phosphorus" name="phosphorus" required />
+                    <label class="input-label">Phosphorus (P)</label>
+                </div>
+                <div class="input">
+                    <input type="number" class="input-field" step="any" id="potassium" name="potassium" required />
+                    <label class="input-label">Potassium (K)</label>
+                </div>
+                <div class="input">
+                    <input type="number" class="input-field" step="any" id="temperature" name="temperature" required />
+                    <label class="input-label">Temperature</label>
+                </div>
+                <div class="input">
+                    <input type="number" class="input-field" step="any" id="ph" name="ph" required />
+                    <label class="input-label">pH of Soil</label>
+                </div>
+                <div class="input">
+                    <input type="number" class="input-field" step="any" id="rainfall" name="rainfall" required />
+                    <label class="input-label">Rainfall</label>
+                </div>
+                <div class="input">
+                    <input type="number" class="input-field" step="any" id="humidity" name="humidity" required />
+                    <label class="input-label">Humidity</label>
+                </div>
 
-        <label for="phosphorus">Phosphorus (P):</label>
-        <input type="number" step="any" id="phosphorus" name="phosphorus" required><br><br>
-
-        <label for="potassium">Potassium (K):</label>
-        <input type="number" step="any" id="potassium" name="potassium" required><br><br>
-
-        <label for="temperature">Temperature:</label>
-        <input type="number" step="any" id="temperature" name="temperature" required><br><br>
-
-        <label for="humidity">Humidity:</label>
-        <input type="number" step="any" id="humidity" name="humidity" required><br><br>
-
-        <label for="ph">pH of Soil:</label>
-        <input type="number" step="any" id="ph" name="ph" required><br><br>
-
-        <label for="rainfall">Rainfall:</label>
-        <input type="number" step="any" id="rainfall" name="rainfall" required><br><br>
-
-        <input type="submit" value="Predict">
-    </form>
-
-
-    
+                <div class="action">
+                    <button class="action-button" value="Predict">Get Crop</button>
+                </div>
+            </form>
+            <div class="card-info">
+                <p> <a href="{% url 'predict'%}">Try Again</a></p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
