--- a/Agriculture/AgriApp/templates/dashboard_main.html
+++ b/Agriculture/AgriApp/templates/dashboard_main.html
@@ -36,6 +36,10 @@
                 <h3>Predicted Disease</h3>
                 <p id="predicted-disease">Fetching disease prediction...</p>
             </div>
+            <form action="{% url 'logout' %}" method="post" style="display:inline;">
+                {% csrf_token %}
+                <button type="submit">Logout</button>
+            </form>
         </div>
     </div>
     <script src="script.js"></script>
