--- a/Agriculture/AgriApp/templates/index2.html
+++ b/Agriculture/AgriApp/templates/index2.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-    <p>
-        Hello world
-    </p>
+    <div id="navbar">
+        <h2>FarmAsisst</h2>
+        
+    </div>
 
     <div id="chat-container">
         <div id="chat-messages">
