--- a/Agriculture/AgriApp/static/css/disease.css
+++ b/Agriculture/AgriApp/static/css/disease.css
@@ -78,7 +78,7 @@ input {
       .file-upload-label {
         display: inline-block;
         padding: 10px;
-        background-color: #6658d3;
+        background-color: #115525;
         color: white;
         border: none;
         border-radius: 5px;
@@ -104,7 +104,7 @@ input {
       .submit-button {
         display: inline-block;
         padding: 10px 20px;
-        background-color: #6658d3;
+        background-color: #115525;
         color: white;
         border: none;
         border-radius: 5px;
@@ -114,7 +114,7 @@ input {
       }
   
       .submit-button:hover {
-        background-color: #6658d3;
+        background-color: #115525;
       }
       
 .action {
@@ -128,7 +128,7 @@ input {
     padding: 1em;
     width: 30%;
     font-weight: 500;
-    background-color: #6658d3;
+    background-color: #115525;
     border-radius: 6px;
     color: #FFF;
     border: 0;
@@ -149,7 +149,7 @@ input {
 
     a {
         display: block;
-        color: #6658d3;
+        color: #115525;
         text-decoration: none;
     }
 }
