--- a/Agriculture/AgriApp/static/css/fert_rec.css
+++ b/Agriculture/AgriApp/static/css/fert_rec.css
@@ -106,10 +106,10 @@ input {
     &:focus,
     &:valid {
         outline: 0;
-        border-bottom-color: #6658d3;
+        border-bottom-color: #115525;
 
         &+.input-label {
-            color: #6658d3;
+            color: #115525;
             transform: translateY(-1.5rem);
         }
     }
@@ -139,7 +139,7 @@ select{
     padding: 1em;
     width: 30%;
     font-weight: 500;
-    background-color: #6658d3;
+    background-color: #115525;
     border-radius: 6px;
     color: #FFF;
     border: 0;
@@ -159,7 +159,7 @@ select{
 
     a {
         display: block;
-        color: #6658d3;
+        color: #115525;
         text-decoration: none;
     }
 }
