--- a/Agriculture/AgriApp/templates/dashboard_main.html
+++ b/Agriculture/AgriApp/templates/dashboard_main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Dashboard</title>
-    <link rel="stylesheet" href="{% static 'css/styledash.css'%}">
+    <link rel="stylesheet" href="{% static 'css/stylechat.css'%}">
 </head>
 <body>
     <div class="dashboard">
