--- a/Agriculture/AgriApp/templates/prediction_result.html
+++ b/Agriculture/AgriApp/templates/prediction_result.html
@@ -28,8 +28,23 @@
             <div class="card-info">
                 <p> <a href="{% url 'predict' %}">Make another prediction</a></p>
             </div>
+            <div class="translate-container" id="google_translate_element"></div>
         </div>
+        
     </div>
+    
+    <script type="text/javascript"
+        src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                includedLanguages: 'hi,gu,kn,ml,mr,pa,ta,te,bn,ur,as,or',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            }, 'google_translate_element')
+        };
+    </script>
 </body>
 
 </html>
